--- a/index.html
+++ b/index.html
@@ -73,18 +73,57 @@
 
     <img src="images/5.jpg" width="707,7" height="457,4" alt="Шрифтовые плакаты">
 
-    <img src="images/6.jpg" width="708,5" height="500" alt="Шрифтовые плакаты">
+    <img src="images/6.jpg" width="708,5" height="500" alt="Шрифтовые плакаты_2">
 
     <p>Графические плакаты я решила сделать динамичными.</p>
 
     <img src="images/7.jpg" width="714,2" height="476,2" alt="Графические плакаты">
 
   <h3 id="s2s3">Веб-плакат</h2>
+    <p>Одним из самых необычных и сложных заданий был веб-плакат по арт-практике. Основная сложность заключалась даже не в исполнении, а в том, что было не совсем понятно, что он из себя представляет, что он должен в себя включать. Именно такая задача и стояла перед нами: придумать его структуру, предположить, как он может выглядеть.</p>
+
+    <p>Я решила сделать его визуально простым, сделав упор на содержание, чтобы максимально просто и эффективно показать суть проекта.</p>
+
+    <img src="images/8.png" width="642,8" height="357,1" alt="Веб-плакат слои">
+
+    <p>Плакат был построен с помощью сетки (grids), с шрифтами без засечек и с  доминирующими буквами заголовка на переднем плане. Также, он "резиновый" и хорошо смотрится на любом экране.</p>
+
+    <img src="images/9.png" width="666,6" height="416,6" alt="Устройства">
+
+    <p>Полную версию можно посмотреть <a href="https://varalie.github.io/web-poster/">здесь</a></p>
+
   <h3 id="s2s4">3D пространство и книга</h2>
 
+    <p>На основе фирменного стиля проекта из прошлых модулей нужно было создать пространство, которое по типу соотвествовало бы теме. Так, я построила маленьку лабораторию, которая ассоциировалась бы с чем-то игрушечным благодаря своим размерам, цветовой гамме и архитектуре. Я старалась сделать ее похожей на башню из кубиков.</p>
+
+    <p>В лаборатории три блока, первый для посетителей со стойкой администрации, второй – студия с компьютерами, где можно создать себе животное и третий сама лаборатория</p>
+
+    <img src="images/10.jpg" width="662,5" height="331,7" alt="1 блок">
+
+    <img src="images/11.jpg" width="662,5" height="331,7" alt="2 блок">
+
+    <img src="images/12.jpg" width="662,5" height="331,7" alt="3 блок">
+
+    <p>Видео с облетом здания.</p>
+
     <iframe src="https://player.vimeo.com/video/326711360" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-    
+
+    <p>В качестве презентации создается многостраничное издание, рассказывающее о пространстве проекта.</p>
+
+    <img src="images/13.jpg" width="668,4" height="446,2" alt="Обложка книги">
+
+    <p>Полную версию книги можно посмотреть <a href="https://ru.calameo.com/read/005864776ea965c3c124e?authid=NMaTpvwQW1Wp">здесь</a></p>
+
   <h3 id="s2s5">Интерактивный веб-плакат</h2>
+    <p>Главная особенность и отличие интерактивного веб-плаката от статичного в том, что он построен с помощью jQuery.</p>
+
+    <p>За основу взяты кубики из 3D ролика, которые, переворачиваясь, составляют разные комбинации животных из главных графических образов проекта.</p>
+
+    <img src="images/14.png" width="666,6" height="416,6" alt="Устройства_2">
+
+    <p>Интерактивная часть построена с помощью библиотеки Hexaflip, которая дает возможность использовать кубы в качестве элементов интерфейса. Кубики на странице можно переворачивать по горизонтали с помощью курсора.</p>
+
+    <p>Полную версию интерактивного плаката можно посмотреть <a href="https://varalie.github.io/Poster_JS/">здесь</a></p>
 
   <h2 id="s3">Груминг-салон «Фу!»</h2>
 </article>
