Исправление косяков + контент

--- a/index.html
+++ b/index.html
@@ -34,7 +34,18 @@
     </ul>
     </li>
     <li>
-      <a href="#s3">Груминг-салон "Фу!"</a>
+     <a href="#s3">Груминг-салон "Фу!"</a>
+      <ul>
+        <li>
+          <a href="#s3s1">1 вариант</a>
+        </li>
+        <li>
+          <a href="#s3s2">2 вариант</a>
+        </li>
+        <li>
+          <a href="#s3s3">Финальный вариант</a>
+        </li>
+      </ul>
     </li>
   </ul>
 </nav>
@@ -51,7 +62,7 @@
     <p>Первые три модуля первого курса мы работали над фантастическим проектом, который было бы сложно или и вовсе невозможно воплотить в реальности. Нужно было придумать для него все, от названия до пространства, — и проработать.</p>
     <p>Так появился мой проект. Химера — это лаборатория, занимающаяся созданием животных, полученных вследствие скрещивания генетически различающихся видов. По Вашим заказам лаборатория может вдохнуть жизнь в самых удивительных существ, которые готовы принести радость своим будущим хозяевам.</p>
 
-  <h3 id="s2s1">Малый фирменный стиль</h2>
+  <h3 id="s2s1">Малый фирменный стиль</h3>
     <p>Первый модуль был посвящён созданию малого фирменного стиля. Логотипы, визитки, блокноты, конверты, а также сумки, футболки и другие предметы относящиеся к проекту.</p>
 
     <p>Основой моего малого фирменного стиля стали графические образы.</p>
@@ -68,7 +79,7 @@
 
     <img src="images/4.png" width="688,2" height="486,8" alt="Футболки">
 
-  <h3 id="s2s2">Плакат</h2>
+  <h3 id="s2s2">Плакат</h3>
     <p>Во втором модуле мы делали плакаты. Нужно было сделать серию из 5 шрифтовых и 5 графических.</p>
 
     <img src="images/5.jpg" width="707,7" height="457,4" alt="Шрифтовые плакаты">
@@ -79,7 +90,7 @@
 
     <img src="images/7.jpg" width="714,2" height="476,2" alt="Графические плакаты">
 
-  <h3 id="s2s3">Веб-плакат</h2>
+  <h3 id="s2s3">Веб-плакат</h3>
     <p>Одним из самых необычных и сложных заданий был веб-плакат по арт-практике. Основная сложность заключалась даже не в исполнении, а в том, что было не совсем понятно, что он из себя представляет, что он должен в себя включать. Именно такая задача и стояла перед нами: придумать его структуру, предположить, как он может выглядеть.</p>
 
     <p>Я решила сделать его визуально простым, сделав упор на содержание, чтобы максимально просто и эффективно показать суть проекта.</p>
@@ -92,7 +103,7 @@
 
     <p>Полную версию можно посмотреть <a href="https://varalie.github.io/web-poster/">здесь</a></p>
 
-  <h3 id="s2s4">3D пространство и книга</h2>
+  <h3 id="s2s4">3D пространство и книга</h3>
 
     <p>На основе фирменного стиля проекта из прошлых модулей нужно было создать пространство, которое по типу соотвествовало бы теме. Так, я построила маленьку лабораторию, которая ассоциировалась бы с чем-то игрушечным благодаря своим размерам, цветовой гамме и архитектуре. Я старалась сделать ее похожей на башню из кубиков.</p>
 
@@ -114,7 +125,7 @@
 
     <p>Полную версию книги можно посмотреть <a href="https://ru.calameo.com/read/005864776ea965c3c124e?authid=NMaTpvwQW1Wp">здесь</a></p>
 
-  <h3 id="s2s5">Интерактивный веб-плакат</h2>
+  <h3 id="s2s5">Интерактивный веб-плакат</h3>
     <p>Главная особенность и отличие интерактивного веб-плаката от статичного в том, что он построен с помощью jQuery.</p>
 
     <p>За основу взяты кубики из 3D ролика, которые, переворачиваясь, составляют разные комбинации животных из главных графических образов проекта.</p>
@@ -126,6 +137,47 @@
     <p>Полную версию интерактивного плаката можно посмотреть <a href="https://varalie.github.io/Poster_JS/">здесь</a></p>
 
   <h2 id="s3">Груминг-салон «Фу!»</h2>
+
+  <p>Для четвертого модуля необходимо было изменить тему проекта, максимально приблизив ее к реальности. Проект должен стать логическим и концептуальным продолжением предыдущей темы. Я решила сохранить тему животных и сделать груминг-салон.</p>
+
+  <img src="images/15.jpg" width="661,4" height="466,6" alt="Плакат_1">
+
+  <p>Таким образом, в этом модуле все начиналось сначала, но только более углубленно. Придумать название, разработать концепцию и позиционирование, найти конкурентов и указать целевую аудиторию, а также сделать новый логотип и фирменный стиль с носителями. Всего нужно было предоставить 3 варианта.</p>
+
+  <h3>Почему «Фу!»?</h3>
+
+  <p>ФУ, междом. — выражение отвращения, реакция на плохой запах, грязь и т. д., а также запретительная команда собаке или любому другому животному.</p>
+
+  <h3 id="s3s1">1 вариант</h3>
+
+    <p>За основу взяты злые и недовольные мордочки кошек и собак. Неухоженные = недовольные. Яркие украшения призваны показать преображение, которое будет происходить с питомцем.</p>
+
+    <img src="images/16.png" width="714,2" height="452,5" alt="Малый фирменный стиль_2">
+
+    <img src="images/17.png" width="750" height="500" alt="Шампунь_1">
+
+  <h3 id="s3s2">2 вариант</h3>
+
+    <p>Используются инструменты для груминга, как неотъемлимая часть любого груминг-салона. Расчески, бритвы, фен и т.п.. Из них сделаны паттерны. Название салона представлено в виде ножниц и клинковой бритвы.</p>
+
+    <img src="images/18.png" width="714,2" height="452,5" alt="Малый фирменный стиль_3">
+
+    <img src="images/19.png" width="750" height="500" alt="Шампунь_2">
+
+  <h3 id="s3s3">Финальный вариант</h3>
+
+    <p>Испачканные лапки кошек и собак, а также пятна оставленные ими на разных элементах фирменного стиля, как олицетворение неухоженности и неопрятности.</p>
+
+    <img src="images/20.png" width="714,2" height="452,5" alt="Малый фирменный стиль_4">
+
+    <img src="images/21.png" width="750" height="500" alt="Шампунь_3">
+
+    <p>И несколько плакатов.</p>
+
+    <img src="images/22.jpg" width="661,4" height="466,6" alt="Плакат_2">
+
+    <img src="images/23.jpg" width="661,4" height="466,6" alt="Плакат_3">
+
 </article>
 
 <script src="javascripts/jquery-3.3.1.min.js" charset="utf-8"></script>
