--- a/index.html
+++ b/index.html
@@ -8,50 +8,58 @@
     </head>
 <body>
 
-<nav class="sidebar">
-  <ul>
-    <li>
-      <a href="#s1">Обо мне</a>
-    </li>
-    <li>
-      <a href="#s2">Лаборатория генетического скрещивания животных "Химера"</a>
-    <ul>
-      <li>
-        <a href="#s2s1">Малый фирменный стиль</a>
-      </li>
-      <li>
-        <a href="#s2s2">Плакат</a>
-      </li>
-      <li>
-        <a href="#s2s3">Веб-плакат</a>
-      </li>
-      <li>
-        <a href="#s2s4">3D пространство и книга</a>
-      </li>
-      <li>
-        <a href="#s2s5">Интерактивный веб-плакат</a>
-      </li>
-    </ul>
-    </li>
-    <li>
-     <a href="#s3">Груминг-салон "Фу!"</a>
+
+  <div class="sidebar">
+    <input id="menu__toggle" type="checkbox" />
+    <label class="menu__btn" for="menu__toggle">
+      <span></span>
+    </label>
+    <nav class="menu__box">
       <ul>
         <li>
-          <a href="#s3s1">1 вариант</a>
+          <a href="#s1">Обо мне</a>
         </li>
         <li>
-          <a href="#s3s2">2 вариант</a>
+          <a href="#s2">Лаборатория генетического скрещивания животных "Химера"</a>
+        <ul>
+          <li>
+            <a href="#s2s1">Малый фирменный стиль</a>
+          </li>
+          <li>
+            <a href="#s2s2">Плакат</a>
+          </li>
+          <li>
+            <a href="#s2s3">Веб-плакат</a>
+          </li>
+          <li>
+            <a href="#s2s4">3D пространство и книга</a>
+          </li>
+          <li>
+            <a href="#s2s5">Интерактивный веб-плакат</a>
+          </li>
+        </ul>
         </li>
         <li>
-          <a href="#s3s3">Финальный вариант</a>
+          <a href="#s3">Груминг-салон "Фу!"</a>
+          <ul>
+          <li>
+            <a href="#s3s1">1 вариант</a>
+          </li>
+          <li>
+            <a href="#s3s2">2 вариант</a>
+          </li>
+          <li>
+            <a href="#s3s3">Финальный вариант</a>
+          </li>
+          </ul>
         </li>
       </ul>
-    </li>
-  </ul>
-</nav>
+    </nav>
+  </div>
+
 
 <article>
-<img src="images/0.png" width="251" height="241" alt="0">
+<img src="images/0.png" alt="0">
 
 <h1 id="s1">Обо мне</h1>
 
