--- a/index.html
+++ b/index.html
@@ -188,6 +188,15 @@
 
 </article>
 
+
+
+  <p>Проект студентки первого курса профиля <a href="https://design.hse.ru/ba/programming">«Дизайн и программирование»</a><br>
+  <a href="https://design.hse.ru/">Школа дизайна НИУ ВШЭ</a><br>
+
+  <a href="https://portfolio.hse.ru/User/10418">Пенина Валерия</a> © 2019</p>
+
+
+
 <script src="javascripts/jquery-3.3.1.min.js" charset="utf-8"></script>
 <script src="javascripts/sidebar.js" charset="utf-8"></script>
 
