--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
 <article>
-<img src="images/0.png" alt="0">
+<img src="images/0.png" width="651,4" height="296,8" alt="0">
 
 <h1 id="s1">Обо мне</h1>
 
