--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
 <h1 id="s1">Обо мне</h1>
 
   <p>Привет!
-  Меня зовут Валерия и я студентка Школы Дизайна НИУ ВШЭ. Учусь на профиле «дизайн и программирование», увлекаюсь прокрастинированием и люблю животных. Мой проект на первом курсе как раз был посвящен им.</p>
+  Меня зовут Валерия, и я студентка Школы Дизайна НИУ ВШЭ. Учусь на профиле «дизайн и программирование», увлекаюсь прокрастинированием и люблю животных. Мой проект на первом курсе как раз был посвящен им.</p>
 
   <h2 id="s2">Лаборатория генетического скрещивания животных «Химера»</h2>
-    <p>Первые три модуля первого курса мы работали над фантастическим проектом, который было бы сложно или и вовсе невозможно воплотить в реальности. Нужно было придумать для него все, от названия до пространства, — и проработать.</p>
+    <p>Первые три модуля первого курса мы работали над фантастическим проектом, который было бы сложно или и вовсе невозможно воплотить в реальности. Нужно было придумать и проработать все: от названия до пространства.</p>
+
     <p>Так появился мой проект. Химера — это лаборатория, занимающаяся созданием животных, полученных вследствие скрещивания генетически различающихся видов. По Вашим заказам лаборатория может вдохнуть жизнь в самых удивительных существ, которые готовы принести радость своим будущим хозяевам.</p>
 
   <h3 id="s2s1">Малый фирменный стиль</h3>
@@ -113,9 +114,9 @@
 
   <h3 id="s2s4">3D пространство и книга</h3>
 
-    <p>На основе фирменного стиля проекта из прошлых модулей нужно было создать пространство, которое по типу соотвествовало бы теме. Так, я построила маленьку лабораторию, которая ассоциировалась бы с чем-то игрушечным благодаря своим размерам, цветовой гамме и архитектуре. Я старалась сделать ее похожей на башню из кубиков.</p>
+    <p>На основе фирменного стиля проекта из прошлых модулей нужно было создать пространство, которое по типу соотвествовало бы теме. Так я построила маленьку лабораторию, которая ассоциировалась бы с чем-то игрушечным благодаря своим размерам, цветовой гамме и архитектуре. Я старалась сделать ее похожей на башню из кубиков.</p>
 
-    <p>В лаборатории три блока, первый для посетителей со стойкой администрации, второй – студия с компьютерами, где можно создать себе животное и третий сама лаборатория</p>
+    <p>В лаборатории три блока: первый для посетителей со стойкой администрации, второй – студия с компьютерами, где можно создать себе животное и третий — сама лаборатория</p>
 
     <img src="images/10.jpg" width="662,5" height="331,7" alt="1 блок">
 
