--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Проект | Сайт-портфолио</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     </head>
 <body>
