--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <h1 id="s1">Обо мне</h1>
 
   <p>Привет!
-  Меня зовут Валерия, и я студентка Школы Дизайна НИУ ВШЭ. Учусь на профиле «дизайн и программирование», увлекаюсь прокрастинированием и люблю животных. Мой проект на первом курсе как раз был посвящен им.</p>
+  Меня зовут Валерия, и я студентка Школы Дизайна НИУ ВШЭ. Учусь на профиле «дизайн и программирование», увлекаюсь прокрастинированием и люблю животных. Мои проекты на первом курсе как раз были посвящены им.</p>
 
   <h2 id="s2">Лаборатория генетического скрещивания животных «Химера»</h2>
     <p>Первые три модуля первого курса мы работали над фантастическим проектом, который было бы сложно или и вовсе невозможно воплотить в реальности. Нужно было придумать и проработать все: от названия до пространства.</p>
